--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@babel/runtime": "^7.10.5",
     "micromodal": "^0.4.6",
     "normalize.css": "^8.0.1",
-    "overlayscrollbars": "^1.12.0"
+    "overlayscrollbars": "^1.12.0",
+    "tippy.js": "^6.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
