--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/runtime": "^7.10.5",
+    "choices.js": "^9.0.1",
     "micromodal": "^0.4.6",
     "normalize.css": "^8.0.1",
     "overlayscrollbars": "^1.12.0",
