--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/runtime": "^7.10.5",
     "@trevoreyre/autocomplete-js": "^2.2.0",
+    "axios": "^0.20.0",
     "choices.js": "^9.0.1",
     "micromodal": "^0.4.6",
     "normalize.css": "^8.0.1",
     "overlayscrollbars": "^1.12.0",
+    "redom": "^3.27.1",
     "tippy.js": "^6.2.5"
   },
   "devDependencies": {
