--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "normalize.css": "^8.0.1",
     "overlayscrollbars": "^1.12.0",
     "redom": "^3.27.1",
-    "tippy.js": "^6.2.5"
+    "tippy.js": "^6.2.5",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
