--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "npm": "^6.14.6",
     "smart-grid": "^2.1.2",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-stream": "^5.2.1"
   },
   "scripts": {
